# hdbscan-incremental

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  mise.toml
.gemini/: styleguide.md
src/: bubble_tree.rs  cf.rs  data_bubble.rs  distance.rs  hdbscan.rs  lib.rs  types.rs
tests/: bubble_tree_test.rs  hdbscan_test.rs  integration_test.rs
