[package]
name = "hdbscan-incremental"
version = "0.1.0"
edition = "2021"
description = "Incremental HDBSCAN clustering with Bubble-tree for dynamic data"
license = "MIT"

[dependencies]
rayon = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
turbovec = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"], optional = true }

[features]
default = []
turbovec = ["dep:turbovec", "dep:blas-src"]

[dev-dependencies]
rand = "0.8"
